# aware-swe-agent

./: README.md  pyproject.toml  requirements.txt
QC_Aware_integration_examples/: agent.toml  ask_aware.py  example_questions.csv
src/aware_swe_agent/: __init__.py
src/aware_swe_agent/benchmarks/swebench_verified/: __init__.py  find_swe_batch.py  run_swe_instance.py  run_swe_instances.py  template_qodo_command_swe_agent.toml  utils.py
src/aware_swe_agent/examples/: __init__.py
src/aware_swe_agent/examples/aware_open_repos_analysis/: __init__.py  ask_aware.py  open_source_supported_repos.csv
src/aware_swe_agent/examples/aware_open_repos_analysis/agents/: ask_open_aware.toml
src/benchmarks/swebench_verified/: README.md  find_swe_batch.py  template_qodo_command_swe_agent.toml
src/examples/aware_open_repos_analysis/agents/: ask_open_aware.toml
src/swe_plan_and_solve/: agent.toml  problem.txt
src/swe_plan_and_solve/agents/: plan_issue_solution.toml  plan_mode.toml  solve_issue_from_plan.toml  solve_mode.toml
swebench_verified/: find_swe_batch.py  run_swe_instance.py  run_swe_instances.py  utils.py
